k8s/components/apps/home-automation/hass/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hass
spec:
  selector:
    app: hass 
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123
