k8s/components/apps/home-automation/hass/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - hass.example.com
      secretName: tls-secret
  rules:
    - host: hass.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hass
                port:
                  number: 8123
